{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 67,
  "lineage": "2869e3f0-367b-d0e2-3a94-294fe8914f00",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:security-group/sg-08bfc9d258610d6fd",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08bfc9d258610d6fd",
            "ingress": [],
            "name": "education-eks-t5k0MctI-cluster-2024030308091892550000000d",
            "name_prefix": "education-eks-t5k0MctI-cluster-",
            "owner_id": "120651511769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-t5k0MctI-cluster"
            },
            "tags_all": {
              "Name": "education-eks-t5k0MctI-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:security-group/sg-0a09a5b719a73e56e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a09a5b719a73e56e",
            "ingress": [],
            "name": "education-eks-t5k0MctI-node-2024030308091892470000000c",
            "name_prefix": "education-eks-t5k0MctI-node-",
            "owner_id": "120651511769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-t5k0MctI-node",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "owned"
            },
            "tags_all": {
              "Name": "education-eks-t5k0MctI-node",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1617740753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08bfc9d258610d6fd",
            "security_group_rule_id": "sgr-097c90bea4987e44a",
            "self": false,
            "source_security_group_id": "sg-0a09a5b719a73e56e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3972263118",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-0b5ade7d3a8010d82",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3908034362",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-029eec6010511ed63",
            "self": false,
            "source_security_group_id": "sg-08bfc9d258610d6fd",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3037879804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-01f26e18a13a6d752",
            "self": false,
            "source_security_group_id": "sg-08bfc9d258610d6fd",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2085632618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-009bf12a194aa9aa0",
            "self": false,
            "source_security_group_id": "sg-08bfc9d258610d6fd",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1863059019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-062f5b74244eff295",
            "self": false,
            "source_security_group_id": "sg-08bfc9d258610d6fd",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-195900800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-0d8fab5dac4ff270d",
            "self": false,
            "source_security_group_id": "sg-08bfc9d258610d6fd",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2422359371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-0455c829ec83ce0b0",
            "self": false,
            "source_security_group_id": "sg-08bfc9d258610d6fd",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-120901159",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-0a27dfb17c6ee0124",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2703404340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-0a161d07623c210f8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-92081883",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a09a5b719a73e56e",
            "security_group_rule_id": "sgr-0a0100237dcdadd94",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:network-acl/acl-08613f24616d091e0",
            "default_network_acl_id": "acl-08613f24616d091e0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-08613f24616d091e0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "120651511769",
            "subnet_ids": [
              "subnet-000fbe11dd0e6b3d2",
              "subnet-05eea8b64af6353f3",
              "subnet-0680d30181c56c11a",
              "subnet-07cfb19298fc025cf",
              "subnet-0bdb79ef7784e318e",
              "subnet-0fbecc5c93b794a9c"
            ],
            "tags": {
              "Name": "education-vpc-default"
            },
            "tags_all": {
              "Name": "education-vpc-default"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:route-table/rtb-0b83e5b6285304214",
            "default_route_table_id": "rtb-0b83e5b6285304214",
            "id": "rtb-0b83e5b6285304214",
            "owner_id": "120651511769",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "education-vpc-default"
            },
            "tags_all": {
              "Name": "education-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:security-group/sg-0629ccc468b7f407c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0629ccc468b7f407c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "120651511769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-vpc-default"
            },
            "tags_all": {
              "Name": "education-vpc-default"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073f819e8d53ee72b",
            "domain": "vpc",
            "id": "eipalloc-073f819e8d53ee72b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-209-177-227.compute-1.amazonaws.com",
            "public_ip": "3.209.177.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "education-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "education-vpc-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:internet-gateway/igw-040c72cc6dfd34685",
            "id": "igw-040c72cc6dfd34685",
            "owner_id": "120651511769",
            "tags": {
              "Name": "education-vpc"
            },
            "tags_all": {
              "Name": "education-vpc"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-073f819e8d53ee72b",
            "association_id": "eipassoc-0e3d2cac7b02b11d4",
            "connectivity_type": "public",
            "id": "nat-063d3966df77b9fb5",
            "network_interface_id": "eni-0523d36047df21c7d",
            "private_ip": "10.0.4.72",
            "public_ip": "3.209.177.227",
            "subnet_id": "subnet-0fbecc5c93b794a9c",
            "tags": {
              "Name": "education-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "education-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b9b641948decfbd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-063d3966df77b9fb5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b9b641948decfbd3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040c72cc6dfd34685",
            "id": "r-rtb-0ff1b32305b8f07151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ff1b32305b8f0715",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:route-table/rtb-0b9b641948decfbd3",
            "id": "rtb-0b9b641948decfbd3",
            "owner_id": "120651511769",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-vpc-private"
            },
            "tags_all": {
              "Name": "education-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:route-table/rtb-0ff1b32305b8f0715",
            "id": "rtb-0ff1b32305b8f0715",
            "owner_id": "120651511769",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-vpc-public"
            },
            "tags_all": {
              "Name": "education-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b42d48d8ea3164d",
            "route_table_id": "rtb-0b9b641948decfbd3",
            "subnet_id": "subnet-07cfb19298fc025cf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb04fb038b1e2cd7",
            "route_table_id": "rtb-0b9b641948decfbd3",
            "subnet_id": "subnet-000fbe11dd0e6b3d2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090c85e14bcc18c68",
            "route_table_id": "rtb-0b9b641948decfbd3",
            "subnet_id": "subnet-05eea8b64af6353f3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae41ec88e6c389d3",
            "route_table_id": "rtb-0ff1b32305b8f0715",
            "subnet_id": "subnet-0fbecc5c93b794a9c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067e4839fe74ef70b",
            "route_table_id": "rtb-0ff1b32305b8f0715",
            "subnet_id": "subnet-0bdb79ef7784e318e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e644edaeae0809e2",
            "route_table_id": "rtb-0ff1b32305b8f0715",
            "subnet_id": "subnet-0680d30181c56c11a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:subnet/subnet-07cfb19298fc025cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cfb19298fc025cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120651511769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-1a",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-1a",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:subnet/subnet-000fbe11dd0e6b3d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000fbe11dd0e6b3d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120651511769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-1b",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-1b",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:subnet/subnet-05eea8b64af6353f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eea8b64af6353f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120651511769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-private-us-east-1c",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-private-us-east-1c",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:subnet/subnet-0fbecc5c93b794a9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbecc5c93b794a9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120651511769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-1a",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-1a",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:subnet/subnet-0bdb79ef7784e318e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdb79ef7784e318e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120651511769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-1b",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-1b",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:subnet/subnet-0680d30181c56c11a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0680d30181c56c11a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "120651511769",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "education-vpc-public-us-east-1c",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-vpc-public-us-east-1c",
              "kubernetes.io/cluster/education-eks-t5k0MctI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00558698e23f4a629"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:120651511769:vpc/vpc-00558698e23f4a629",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08613f24616d091e0",
            "default_route_table_id": "rtb-0b83e5b6285304214",
            "default_security_group_id": "sg-0629ccc468b7f407c",
            "dhcp_options_id": "dopt-06f2b0b6b81da269a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00558698e23f4a629",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b83e5b6285304214",
            "owner_id": "120651511769",
            "tags": {
              "Name": "education-vpc"
            },
            "tags_all": {
              "Name": "education-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}